Make the Dockerfile great again